commit integration k8s nginx , ingress